Add dynamic module require demo

--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/stylesheets/global.css">
   {% block head %}{% endblock %}
 </head>
-<body>
+<body data-module="Pinkify">
   <h1>Gulp All The Things!</h1>
   {% block content %}{% endblock %}
   <p>Made with ♥ at <a href="http://viget.com">Viget</a></p>
